--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
+appdirs==1.4.4
 astroid==2.4.2
+black==20.8b1
 certifi==2020.12.5
 chardet==4.0.0
+click==7.1.2
 idna==2.10
 isort==5.7.0
+jedi==0.17.2
 karabo-bridge==0.6.0
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
@@ -14,17 +18,27 @@ mypy-extensions==0.4.3
 numpy==1.19.5
 oauth2-xfel-client==6.0.0
 oauthlib==3.1.0
+parso==0.7.1
+pathspec==0.8.1
+pluggy==0.13.1
 pylint==2.6.0
+pyls==0.1.6
+pyls-mypy==0.1.8
 PyQt5==5.15.2
 PyQt5-sip==12.8.1
 PyQt5-stubs==5.14.2.2
+python-jsonrpc-server==0.4.0
+python-language-server==0.36.2
 pytz==2020.5
+PyYAML==5.4.1
 pyzmq==22.0.1
+regex==2020.11.13
 requests==2.25.1
 requests-oauthlib==1.3.0
 six==1.15.0
 toml==0.10.2
 typed-ast==1.4.2
 typing-extensions==3.7.4.3
+ujson==4.0.2
 urllib3==1.26.3
 wrapt==1.12.1
