--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,28 @@
+alembic==1.5.4
+altgraph==0.17
 appdirs==1.4.4
 astroid==2.4.2
 black==20.8b1
 certifi==2020.12.5
+cfelpyutils==1.0.0
 chardet==4.0.0
 click==7.1.2
+cycler==0.10.0
+EXtra-data==1.3.0
+fabio==0.11.0
+future==0.18.2
+h5py==3.1.0
 idna==2.10
 isort==5.7.0
 jedi==0.17.2
 karabo-bridge==0.6.0
+karabo-data==0.7.0
+kiwisolver==1.3.1
 lazy-object-proxy==1.4.3
+macholib==1.14
+Mako==1.1.4
+MarkupSafe==1.1.1
+matplotlib==3.3.4
 mccabe==0.6.1
 metadata-client==3.0.8
 msgpack==1.0.2
@@ -18,15 +32,24 @@ mypy-extensions==0.4.3
 numpy==1.19.5
 oauth2-xfel-client==6.0.0
 oauthlib==3.1.0
+pandas==1.2.1
 parso==0.7.1
 pathspec==0.8.1
+pefile==2019.4.18
+Pillow==8.1.0
 pluggy==0.13.1
+psutil==5.8.0
+PyInstaller==3.4
 pylint==2.6.0
 pyls==0.1.6
 pyls-mypy==0.1.8
+PyMySQL==1.0.2
+pyparsing==2.4.7
 PyQt5==5.15.2
 PyQt5-sip==12.8.1
 PyQt5-stubs==5.14.2.2
+python-dateutil==2.8.1
+python-editor==1.0.4
 python-jsonrpc-server==0.4.0
 python-language-server==0.36.2
 pytz==2020.5
@@ -35,10 +58,14 @@ pyzmq==22.0.1
 regex==2020.11.13
 requests==2.25.1
 requests-oauthlib==1.3.0
+scipy==1.6.0
 six==1.15.0
+SQLAlchemy==1.3.23
+sqlalchemy-stubs==0.4
 toml==0.10.2
 typed-ast==1.4.2
 typing-extensions==3.7.4.3
 ujson==4.0.2
 urllib3==1.26.3
 wrapt==1.12.1
+xarray==0.16.2
