--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ astroid==2.4.2
 black==20.8b1
 certifi==2020.12.5
 cfelpyutils==1.0.0
+cffi==1.14.4
 chardet==4.0.0
 click==7.1.2
+cryptography==3.4.3
 cycler==0.10.0
 EXtra-data==1.3.0
 fabio==0.11.0
@@ -39,6 +41,7 @@ pefile==2019.4.18
 Pillow==8.1.0
 pluggy==0.13.1
 psutil==5.8.0
+pycparser==2.20
 PyInstaller==3.4
 pylint==2.6.0
 pyls==0.1.6
