--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 alembic==1.5.4
 altgraph==0.17
 appdirs==1.4.4
+aspy.refactor-imports==2.1.1
 astroid==2.4.2
 black==20.8b1
+cached-property==1.5.2
 certifi==2020.12.5
 cfelpyutils==1.0.0
 cffi==1.14.4
@@ -10,6 +12,7 @@ chardet==4.0.0
 click==7.1.2
 cryptography==3.4.3
 cycler==0.10.0
+data-science-types==0.2.22
 EXtra-data==1.3.0
 fabio==0.11.0
 future==0.18.2
@@ -34,11 +37,13 @@ mypy-extensions==0.4.3
 numpy==1.19.5
 oauth2-xfel-client==6.0.0
 oauthlib==3.1.0
+packaging==20.9
 pandas==1.2.1
 parso==0.7.1
 pathspec==0.8.1
 pefile==2019.4.18
 Pillow==8.1.0
+Pint==0.16.1
 pluggy==0.13.1
 psutil==5.8.0
 pycparser==2.20
@@ -59,6 +64,7 @@ pytz==2020.5
 PyYAML==5.4.1
 pyzmq==22.0.1
 regex==2020.11.13
+reorder-python-imports==2.4.0
 requests==2.25.1
 requests-oauthlib==1.3.0
 Rx==3.1.1
