Clean up mypy/pylint

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,1 +1,15 @@
 [mypy]
+[mypy-metadata_client]
+ignore_missing_imports = True
+[mypy-extra_data]
+ignore_missing_imports = True
+[mypy-pandas]
+ignore_missing_imports = True
+[mypy-karabo_bridge]
+ignore_missing_imports = True
+[mypy-humanize]
+ignore_missing_imports = True
+[mypy-matplotlib.backends.backend_qt5agg]
+ignore_missing_imports = True
+[mypy-matplotlib.figure]
+ignore_missing_imports = True
