--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,6 @@ chardet==4.0.0
 click==7.1.2
 cryptography==3.4.3
 cycler==0.10.0
-data-science-types==0.2.22
 EXtra-data==1.3.0
 fabio==0.11.0
 future==0.18.2
@@ -41,6 +40,8 @@ mypy-extensions==0.4.3
 numpy==1.19.5
 oauth2-xfel-client==6.0.0
 oauthlib==3.1.0
+ordered-enum==0.0.6
+outcome==1.1.0
 packaging==20.9
 pandas==1.2.1
 parso==0.7.1
@@ -61,6 +62,7 @@ pyparsing==2.4.7
 PyQt5==5.15.2
 PyQt5-sip==12.8.1
 PyQt5-stubs==5.14.2.2
+pyqtgraph==0.11.1
 pytest==6.2.2
 python-dateutil==2.8.1
 python-editor==1.0.4
@@ -71,6 +73,7 @@ PyYAML==5.4.1
 pyzmq==22.0.1
 regex==2020.11.13
 reorder-python-imports==2.4.0
+Represent==1.6.0.post0
 requests==2.25.1
 requests-oauthlib==1.3.0
 Rx==3.1.1
