--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ fabio==0.11.0
 future==0.18.2
 h5py==3.1.0
 humanize==3.2.0
+hypothesis==6.3.0
 idna==2.10
 iniconfig==1.1.1
 isort==5.7.0
@@ -40,7 +41,6 @@ mypy-extensions==0.4.3
 numpy==1.19.5
 oauth2-xfel-client==6.0.0
 oauthlib==3.1.0
-ordered-enum==0.0.6
 outcome==1.1.0
 packaging==20.9
 pandas==1.2.1
@@ -62,7 +62,6 @@ pyparsing==2.4.7
 PyQt5==5.15.2
 PyQt5-sip==12.8.1
 PyQt5-stubs==5.14.2.2
-pyqtgraph==0.11.1
 pytest==6.2.2
 python-dateutil==2.8.1
 python-editor==1.0.4
@@ -79,6 +78,7 @@ requests-oauthlib==1.3.0
 Rx==3.1.1
 scipy==1.6.0
 six==1.15.0
+sortedcontainers==2.3.0
 SQLAlchemy==1.3.23
 sqlalchemy-stubs==0.4
 toml==0.10.2
