--- a/.pylintrc
+++ b/.pylintrc
@@ -10,7 +10,7 @@ fail-under=10
 
 # Add files or directories to the blacklist. They should be base names, not
 # paths.
-ignore=templates
+ignore=
 
 # Add files or directories matching the regex patterns to the blacklist. The
 # regex matches against base names, not paths.
@@ -31,7 +31,7 @@ limit-inference-results=100
 
 # List of plugins (as comma separated values of python module names) to load,
 # usually to register additional checkers.
-load-plugins=
+load-plugins=pylint_flask_sqlalchemy,pylint_flask
 
 # Pickle collected data for later comparisons.
 persistent=yes
@@ -61,7 +61,7 @@ confidence=
 # no Warning level messages displayed, use "--disable=all --enable=classes
 # --disable=W".
 # reinstate after refactoring: no-self-use,non-parent-init-called,super-init-not-called
-disable=invalid-name,missing-module-docstring,too-many-instance-attributes,too-many-branches,missing-class-docstring,missing-function-docstring,line-too-long,missing-final-newline,unused-argument,broad-except,too-many-arguments,bad-whitespace,bad-continuation,bare-except,too-few-public-methods,too-many-locals,too-many-nested-blocks,too-many-statements,too-many-public-methods,too-many-return-statements,blacklisted-name,too-many-lines
+disable=invalid-name,missing-module-docstring,too-many-instance-attributes,too-many-branches,missing-class-docstring,missing-function-docstring,line-too-long,missing-final-newline,broad-except,too-many-arguments,bad-whitespace,bad-continuation,bare-except,too-few-public-methods,too-many-locals,too-many-nested-blocks,too-many-statements,too-many-public-methods,too-many-return-statements,blacklisted-name
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
