Cleanup, finish endpoints for now

--- a/mypy.ini
+++ b/mypy.ini
@@ -9,6 +9,8 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 [mypy-karabo_bridge]
 ignore_missing_imports = True
+[mypy-flask_cors]
+ignore_missing_imports = True
 [mypy-humanize]
 ignore_missing_imports = True
 [mypy-matplotlib.backends.backend_qt5agg]
