--- a/purescript-frontend/.gitignore
+++ b/purescript-frontend/.gitignore
@@ -1,5 +1,5 @@
-/purescript-frontend/.cache/
-/purescript-frontend/.spago/
-/purescript-frontend/dist/
-/purescript-frontend/node_modules/
-/purescript-frontend/output/
+.cache/
+.spago/
+dist/
+node_modules/
+output/
