--- a/requirements.txt
+++ b/requirements.txt
@@ -15,14 +15,19 @@ cryptography==3.4.3
 cycler==0.10.0
 EXtra-data==1.3.0
 fabio==0.11.0
+Flask==1.1.2
+Flask-Cors==3.0.10
 future==0.18.2
+gprof2dot==2021.2.21
 h5py==3.1.0
 humanize==3.2.0
 hypothesis==6.3.0
 idna==2.10
 iniconfig==1.1.1
 isort==5.7.0
+itsdangerous==1.1.0
 jedi==0.17.2
+Jinja2==2.11.3
 karabo-bridge==0.6.0
 karabo-data==0.7.0
 kiwisolver==1.3.1
@@ -86,5 +91,6 @@ typed-ast==1.4.2
 typing-extensions==3.7.4.3
 ujson==4.0.2
 urllib3==1.26.3
+Werkzeug==1.0.1
 wrapt==1.12.1
 xarray==0.16.2
