Meta: pylint/mypy

--- a/mypy.ini
+++ b/mypy.ini
@@ -3,6 +3,14 @@ strict_equality = True
 plugins = sqlmypy
 [mypy-metadata_client]
 ignore_missing_imports = True
+[mypy-numpy]
+ignore_missing_imports = True
+[mypy-matplotlib.pyplot]
+ignore_missing_imports = True
+[mypy-isodate]
+ignore_missing_imports = True
+[mypy-pubchempy]
+ignore_missing_imports = True
 [mypy-extra_data]
 ignore_missing_imports = True
 [mypy-pandas]
