Attributi: add standard units

--- a/mypy.ini
+++ b/mypy.ini
@@ -7,6 +7,8 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 [mypy-matplotlib.pyplot]
 ignore_missing_imports = True
+[mypy-pint]
+ignore_missing_imports = True
 [mypy-isodate]
 ignore_missing_imports = True
 [mypy-setuptools]
