amici: first version

--- a/mypy.ini
+++ b/mypy.ini
@@ -9,6 +9,8 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 [mypy-isodate]
 ignore_missing_imports = True
+[mypy-setuptools]
+ignore_missing_imports = True
 [mypy-pubchempy]
 ignore_missing_imports = True
 [mypy-extra_data]
