amici: update to 0.2pre5, move stuff around

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 stages:
   - test
   - deploy
+  - integration
 
 variables:
   AMARCORD_PYTHON_DOCKER: python:3.8
@@ -23,3 +24,11 @@ deploy:
     - pip install wheel twine
     - python setup.py sdist bdist_wheel
     - TWINE_PASSWORD=${CI_JOB_TOKEN} TWINE_USERNAME=gitlab-ci-token python -m twine upload --skip-existing --repository-url https://gitlab.desy.de/api/v4/projects/${CI_PROJECT_ID}/packages/pypi dist/*
+
+integration:
+  image: $AMARCORD_PYTHON_DOCKER
+  stage: integration
+  script:
+    - pip install -e .
+    - pip install --upgrade --extra-index-url https://maxwell-token:JUX_f_ivQjyZbxZAEPYi@gitlab.desy.de/api/v4/projects/370/packages/pypi/simple amarcord-amici
+    - python integration/amici_test.py
