--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ pylint-and-mypy:
   script:
     - pip install -e .
     - pip install mypy pylint sqlalchemy-stubs
-    - pip install 'PyQt5==5.15.*' 'PyQt5-stubs==5.15.*' 'pyzmq==22.0.*' 'Flask==1.1.*' 'Flask-Cors==3.0.*' 'PyYAML==5.4.*' 'pandas==1.2.*' 'PubChemPy==1.0.*' 'humanize==3.2.*' 'metadata-client==3.0.*' 'PyYAML==5.4.*' 'karabo-bridge==0.6.*' 'numpy==1.19.*' 'matplotlib==3.3.*'
+    - pip install 'PyQt5==5.15.*' 'PyQt5-stubs==5.15.*' 'pyzmq==22.0.*' 'Flask==1.1.*' 'Flask-Cors==3.0.*' 'PyYAML==5.4.*' 'pandas==1.2.*' 'PubChemPy==1.0.*' 'humanize==3.2.*' 'metadata-client==3.0.*' 'PyYAML==5.4.*' 'karabo-bridge==0.6.*' 'numpy==1.19.*' 'matplotlib==3.3.*' 'pint==0.16.*'
     - mypy amarcord
     - apt-get update -y && apt-get install -y qt5-default
     - pylint amarcord
