--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,6 @@ stages:
 
 variables:
   AMARCORD_PYTHON_DOCKER: python:3.8
-  AMARCORD_PYTHON_DOCKER_DEBIAN: python:3.8-buster
 
 # Commented out for now since these need pyqt5 and I wanted to get amici running first
 pylint-and-mypy:
@@ -28,10 +27,23 @@ deploy:
     - python setup.py sdist bdist_wheel
     - TWINE_PASSWORD=${CI_JOB_TOKEN} TWINE_USERNAME=gitlab-ci-token python -m twine upload --skip-existing --repository-url https://gitlab.desy.de/api/v4/projects/${CI_PROJECT_ID}/packages/pypi dist/*
 
-integration:
+integration-amici:
   image: $AMARCORD_PYTHON_DOCKER
   stage: integration
   script:
     - pip install -e .
     - pip install --upgrade --extra-index-url https://maxwell-token:JUX_f_ivQjyZbxZAEPYi@gitlab.desy.de/api/v4/projects/370/packages/pypi/simple amarcord-amici
     - python integration/amici_test.py
+
+integration-uitest:
+  image: $AMARCORD_PYTHON_DOCKER
+  stage: integration
+  variables:
+    QT_QPA_PLATFORM: "offscreen"
+  script:
+    - apt-get update -y
+    - apt-get install -y libgl1-mesa-glx qt5-default
+    - pip install -e .
+    - pip install 'PyQt5==5.15.*' 'PyQt5-stubs==5.15.*' 'pyzmq==22.0.*' 'Flask==1.1.*' 'Flask-Cors==3.0.*' 'PyYAML==5.4.*' 'pandas==1.2.*' 'PubChemPy==1.0.*' 'humanize==3.2.*' 'metadata-client==3.0.*' 'PyYAML==5.4.*' 'karabo-bridge==0.6.*' 'numpy==1.19.*' 'matplotlib==3.3.*' 'pint==0.16.*'
+    - pip install 'pytest==6.2.*' 'pytest-qt==3.3.*'
+    - PYTHONPATH=".:$PYTHONPATH" pytest tests/ui
