--- a/requirements.txt
+++ b/requirements.txt
@@ -70,6 +70,7 @@ PyQt5==5.15.2
 PyQt5-sip==12.8.1
 PyQt5-stubs==5.14.2.2
 pytest==6.2.2
+pytest-qt==3.3.0
 python-dateutil==2.8.1
 python-editor==1.0.4
 python-jsonrpc-server==0.4.0
