CI: add coverage report

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,8 +34,12 @@ integration-tests:
     - apt-get update -y
     - apt-get install -y libgl1-mesa-glx qt5-default
     - pip install -e .[gui]
-    - pip install 'pytest==6.2.*' 'pytest-qt==3.3.*'
-    - PYTHONPATH=".:$PYTHONPATH" pytest tests
+    - pip install 'pytest==6.2.*' 'pytest-qt==3.3.*' 'pytest-cov==2.11.*'
+    - PYTHONPATH=".:$PYTHONPATH" pytest --cov=amarcord/ tests
+    - coverage xml
+  artifacts:
+    reports:
+      cobertura: coverage.xml
 
 # The image built by Nix is much smaller than the one below, but we have to find a way to
 # call “docker load” on it and then upload it. Not sure how to best do this.
