--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ appdirs==1.4.4
 aspy.refactor-imports==2.1.1
 astroid==2.4.2
 attrs==20.3.0
+bcrypt==3.2.0
 black==20.8b1
 cached-property==1.5.2
 certifi==2020.12.5
@@ -11,6 +12,7 @@ cfelpyutils==1.0.0
 cffi==1.14.4
 chardet==4.0.0
 click==7.1.2
+coverage==5.5
 cryptography==3.4.3
 cycler==0.10.0
 EXtra-data==1.3.0
@@ -60,7 +62,7 @@ psutil==5.8.0
 PubChemPy==1.0.4
 py==1.10.0
 pycparser==2.20
-PyInstaller==3.4
+pyinstaller-hooks-contrib==2021.1
 pylint==2.6.0
 pyls==0.1.6
 pyls-mypy==0.1.8
@@ -70,6 +72,7 @@ PyQt5==5.15.2
 PyQt5-sip==12.8.1
 PyQt5-stubs==5.14.2.2
 pytest==6.2.2
+pytest-cov==2.11.1
 pytest-qt==3.3.0
 python-dateutil==2.8.1
 python-editor==1.0.4
