--- a/requirements.txt
+++ b/requirements.txt
@@ -44,6 +44,7 @@ mccabe==0.6.1
 metadata-client==3.0.8
 msgpack==1.0.2
 msgpack-numpy==0.4.7.1
+msgpack-types==0.1.0
 mypy==0.800
 mypy-extensions==0.4.3
 numpy==1.19.5
@@ -86,7 +87,6 @@ reorder-python-imports==2.4.0
 Represent==1.6.0.post0
 requests==2.25.1
 requests-oauthlib==1.3.0
-Rx==3.1.1
 scipy==1.6.0
 six==1.15.0
 sortedcontainers==2.3.0
