Alembic: Add ability to trigger via connection wizard

--- a/mypy.ini
+++ b/mypy.ini
@@ -3,6 +3,9 @@ strict_equality = True
 plugins = sqlmypy
 [mypy-metadata_client]
 ignore_missing_imports = True
+# see https://github.com/sqlalchemy/alembic/issues/745
+[mypy-alembic]
+ignore_missing_imports = True
 [mypy-numpy]
 ignore_missing_imports = True
 [mypy-matplotlib.pyplot]
