--- a/mypy.ini
+++ b/mypy.ini
@@ -6,6 +6,9 @@ ignore_missing_imports = True
 # see https://github.com/sqlalchemy/alembic/issues/745
 [mypy-alembic]
 ignore_missing_imports = True
+# see https://github.com/sqlalchemy/alembic/issues/745
+[mypy-alembic.config]
+ignore_missing_imports = True
 [mypy-numpy]
 ignore_missing_imports = True
 [mypy-matplotlib.pyplot]
