--- a/config.yml
+++ b/config.yml
@@ -8,15 +8,19 @@ myMdC:
 #    Is it safe to assume that trainId in data are redudant and therefore only consider information in data?
 #    Or is some sanity check required?
 # D. We should have 'filling values' in case a device disappears from the stream
-# D. Key should be defined for each `attributo`. If this is not specified, the one from the higher level is used.
+# D. Source/action should be defined for each `attributo`. If this is not specified, the one from the higher level is used.
 Karabo_bridge:
   #! configuration for the Karabo bridge.
-  #   comment [str]     `attributo` comment
-  #   source [str]      EuXFEL source
-  #   value [str]       value to extract
-  #   store [bool]      whether to store the value (default: True)
-  #   action [str]      average or check_if_constant (default: average)
-  version: 1
+  #   comment [str]         `attributo` comment
+  #   source [str]          EuXFEL source
+  #   key [str]             value to extract
+  #   store [bool]          whether to store the value (default: True)
+  #   action [str]          average or check_if_constant (default: average)
+  #   unit [str]            unit of measurement
+  #   filling_value [Any]   filling value in case a source is missing (default: None)
+  configuration:
+    version: 1
+    client_endpoint: tcp://cfeld-pcx36341.desy.de:1234
 
   run:
     # required to slice data from the bridge
@@ -55,6 +59,7 @@ Karabo_bridge:
 
     bunch_charge:
       # D. Should AMARCORD key == Karabo key? If not, where do we store it?
+      # -- this might be "description" + we add header
       # Q. Electron charge value?
       # Q. Can this vary within a run?
       source: SPB_RR_SYS/MDL/BUNCH_PATTERN
@@ -67,7 +72,6 @@ Karabo_bridge:
       # Q. Can this vary within a run?
       source: SPB_RR_SYS/MDL/BUNCH_PATTERN
       key: SASE1.pulseIds.value
-      action: check_if_constant
 
     number_of_bunches:
       # Q. Can this vary within a run?
@@ -114,9 +118,9 @@ Karabo_bridge:
       #   # Q. Errorbar?
       #   key: data.ySigmaTD
 
-      SASE1_intensity:
+      SASE1_pulse_energy:
         key: data.intensitySa1TD
-        unit: mJ # ?
+        unit: milliJoules
 
       # intensitySa1SigmaTD:
       #   key: data.intensitySa1SigmaTD
@@ -127,21 +131,21 @@ Karabo_bridge:
       SASE1_beam_position_x:
         # Q. This equals xTD? Same for all other quantities...
         key: data.xSa1TD
-        unit: mm # ?
+        unit: millimeter # ?
 
       # xSa1SigmaTD:
       #   key: data.xSa1SigmaTD
 
       SASE1_beam_position_y:
         key: data.ySa1TD
-        unit: mm # ?
+        unit: millimeter # ?
 
       # ySa1SigmaTD:
       #   key: data.ySa1SigmaTD
 
-      SASE3_intensity:
+      SASE3_pulse_energy:
         key: data.intensitySa3TD
-        unit: mJ # ?
+        unit: milliJoules
 
       # intensitySa3SigmaTD:
       #   key: data.intensitySa3SigmaTD
@@ -203,74 +207,65 @@ Karabo_bridge:
       #   action: check_if_constant
 
       position_z:
-        # Q. Unit of measurement?
         source: SPB_IRU_AGIPD1M/MOTOR/Z_STEPPER
         key: actualPosition.value
-        unit: mm # ?
+        unit: mm
         action: check_if_constant
 
-      position_Q1_x:
+      position_quadrant1_x:
         # Q. Is M1 x or y?
-        # Q. Unit of measurement?
         source: SPB_IRU_AGIPD1M/MOTOR/Q1M1
         key: actualPosition.value
-        unit: mm # ?
+        unit: mm
         action: check_if_constant
 
-      position_Q1_y:
+      position_quadrant1_y:
         # Q. Is M1 x or y?
-        # Q. Unit of measurement?
         source: SPB_IRU_AGIPD1M/MOTOR/Q1M2
         key: actualPosition.value
-        unit: mm # ?
+        unit: mm
         action: check_if_constant
 
-      position_Q2_x:
+      position_quadrant2_x:
         # Q. Is M1 x or y?
-        # Q. Unit of measurement?
         source: SPB_IRU_AGIPD1M/MOTOR/Q2M1
         key: actualPosition.value
-        unit: mm # ?
+        unit: mm
         action: check_if_constant
 
-      position_Q2_y:
+      position_quadrant2_y:
         # Q. Is M1 x or y?
-        # Q. Unit of measurement?
         source: SPB_IRU_AGIPD1M/MOTOR/Q2M2
         key: actualPosition.value
-        unit: mm # ?
+        unit: mm
         action: check_if_constant
 
-      position_Q3_x:
+      position_quadrant3_x:
         # Q. Is M1 x or y?
-        # Q. Unit of measurement?
         source: SPB_IRU_AGIPD1M/MOTOR/Q3M1
         key: actualPosition.value
-        unit: mm # ?
+        unit: mm
         action: check_if_constant
 
-      position_Q3_y:
+      position_quadrant3_y:
         # Q. Is M1 x or y?
-        # Q. Unit of measurement?
         source: SPB_IRU_AGIPD1M/MOTOR/Q3M2
         key: actualPosition.value
-        unit: mm # ?
+        unit: mm
         action: check_if_constant
 
-      position_Q4_x:
+      position_quadrant4_x:
         # Q. Is M1 x or y?
-        # Q. Unit of measurement?
         source: SPB_IRU_AGIPD1M/MOTOR/Q4M1
         key: actualPosition.value
-        unit: mm # ?
+        unit: mm
         action: check_if_constant
 
-      position_Q4_y:
+      position_quadrant4_y:
         # Q. Is M1 x or y?
-        # Q. Unit of measurement?
         source: SPB_IRU_AGIPD1M/MOTOR/Q4M2
         key: actualPosition.value
-        unit: mm # ?
+        unit: mm
         action: check_if_constant
 
   device:
@@ -285,114 +280,97 @@ Karabo_bridge:
       attenuator1_inserted:
         key: actual.value.isInsertedAct1
       attenuator1_thickness:
-        # Q. Unit of measurement?
         key: actual.value.thicknessAct1
-        unit: mm # ?
+        unit: micrometer
       attenuator1_material:
         key: actual.value.materialAct1
       attenuator1_absorption:
-        # Q. Percent?
         key: actual.value.absorptionAct1
+        unit: percent
 
       attenuator2_inserted:
         key: actual.value.isInsertedAct2
       attenuator2_thickness:
-        # Q. Unit of measurement?
         key: actual.value.thicknessAct2
-        unit: mm # ?
       attenuator2_material:
         key: actual.value.materialAct2
       attenuator2_absorption:
-        # Q. Percent?
         key: actual.value.absorptionAct2
+        unit: percent
 
       attenuator3_inserted:
         key: actual.value.isInsertedAct3
       attenuator3_thickness:
-        # Q. Unit of measurement?
         key: actual.value.thicknessAct3
-        unit: mm # ?
       attenuator3_material:
         key: actual.value.materialAct3
       attenuator3_absorption:
-        # Q. Percent?
         key: actual.value.absorptionAct3
+        unit: percent
 
       attenuator4_inserted:
         key: actual.value.isInsertedAct4
       attenuator4_thickness:
-        # Q. Unit of measurement?
         key: actual.value.thicknessAct4
-        unit: mm # ?
       attenuator4_material:
         key: actual.value.materialAct4
       attenuator4_absorption:
-        # Q. Percent?
         key: actual.value.absorptionAct4
+        unit: percent
 
       attenuator5_inserted:
         key: actual.value.isInsertedAct5
       attenuator5_thickness:
-        # Q. Unit of measurement?
         key: actual.value.thicknessAct5
-        unit: mm # ?
       attenuator5_material:
         key: actual.value.materialAct5
       attenuator5_absorption:
-        # Q. Percent?
         key: actual.value.absorptionAct5
+        unit: percent
 
       attenuator6_inserted:
         key: actual.value.isInsertedAct6
       attenuator6_thickness:
-        # Q. Unit of measurement?
         key: actual.value.thicknessAct6
-        unit: mm # ?
       attenuator6_material:
         key: actual.value.materialAct6
       attenuator6_absorption:
-        # Q. Percent?
         key: actual.value.absorptionAct6
+        unit: percent
 
       attenuator7_inserted:
         key: actual.value.isInsertedAct7
       attenuator7_thickness:
-        # Q. Unit of measurement?
         key: actual.value.thicknessAct7
-        unit: mm # ?
       attenuator7_material:
         key: actual.value.materialAct7
       attenuator7_absorption:
-        # Q. Percent?
         key: actual.value.absorptionAct7
+        unit: percent
 
       attenuator8_inserted:
         key: actual.value.isInsertedAct8
       attenuator8_thickness:
-        # Q. Unit of measurement?
         key: actual.value.thicknessAct8
-        unit: mm # ?
       attenuator8_material:
         key: actual.value.materialAct8
       attenuator8_absorption:
-        # Q. Percent?
         key: actual.value.absorptionAct8
+        unit: percent
 
       attenuator9_inserted:
         key: actual.value.isInsertedAct9
       attenuator9_thickness:
-        # Q. Unit of measurement?
         key: actual.value.thicknessAct9
-        unit: mm # ?
       attenuator9_material:
         key: actual.value.materialAct9
       attenuator9_absorption:
-        # Q. Percent?
         key: actual.value.absorptionAct9
+        unit: percent
 
       transmission:
-        # Q. Percent?
         key: actual.value.transmission
+        unit: percent
 
     attenuator_SPB_XTD9:
       kind: attenuator
@@ -400,56 +378,54 @@ Karabo_bridge:
       action: check_if_constant
 
       attenuator1_increment:
-        # Q. What is this? Inserted or not I suppose
+        # Q. What is this? 'Inserted' or not I suppose
         key: actual.value.incrementRod1
       attenuator1_thickness:
         # Q. Unit of measurement?
         key: actual.value.thicknessRod1
-        unit: mm # ?
+        unit: micrometer # ?
       attenuator1_material:
         key: actual.value.materialRod1
       attenuator1_absorption:
         key: actual.value.absorptionRod1
+        unit: percent
 
       attenuator2_increment:
         # Q. What is this? Inserted or not I suppose
         key: actual.value.incrementRod2
       attenuator2_thickness:
-        # Q. Unit of measurement?
         key: actual.value.thicknessRod2
-        unit: mm # ?
       attenuator2_material:
         key: actual.value.materialRod2
       attenuator2_absorption:
         key: actual.value.absorptionRod2
+        unit: percent
 
       attenuator3_increment:
         # Q. What is this? Inserted or not I suppose
         key: actual.value.incrementRod3
       attenuator3_thickness:
-        # Q. Unit of measurement?
         key: actual.value.thicknessRod3
-        unit: mm # ?
       attenuator3_material:
         key: actual.value.materialRod3
       attenuator3_absorption:
         key: actual.value.absorptionRod3
+        unit: percent
 
       attenuator4_increment:
         # Q. What is this? Inserted or not I suppose
         key: actual.value.incrementRod4
       attenuator4_thickness:
-        # Q. Unit of measurement?
         key: actual.value.thicknessRod4
-        unit: mm # ?
       attenuator4_material:
         key: actual.value.materialRod4
       attenuator4_absorption:
         key: actual.value.absorptionRod4
+        unit: percent
 
       transmission:
-        # Q. Percent?
         key: actual.value.transmission
+        unit: percent
 
     sample_delivery_valves:
       # Q. Are these constant?
@@ -491,35 +467,35 @@ Karabo_bridge:
       sample2_position:
         key: SPB_IRU_LIQUIDJETVALVEVALVE_SAMPLE_2.currentPosition.value
 
-    sample_delivery_HPLC_pump:
+    sample_delivery_rate:
       # Q. needs some documentation
       # Q. This is not constant, I suppose?
       source: SPB_BIO_SYS/PUMP/HPLC
 
       a_flow_value:
         key: a.flow.value
-        unit: L/s # ?
+        unit: microliter/minute
       a_value:
         key: a.volume.value
         unit: L # ?
 
       b_flow_value:
         key: b.volume.value
-        unit: L/s # ?
+        unit: microliter/minute
       b_value:
         key: b.flow.value
         unit: L # ?
 
       c_flow_value:
         key: c.flow.value
-        unit: L/s # ?
+        unit: microliter/minute
       c_value:
         key: c.volume.value
         unit: L # ?
 
       d_flow_value:
         key: d.flow.value
-        unit: L/s # ?
+        unit: microliter/minute
       d_value:
         key: d.volume.value
         unit: L # ?
@@ -529,6 +505,5 @@ Karabo_bridge:
       action: check_if_constant
 
       position_z:
-        # Q. Unit?
         key: actualPosition.value
-        unit: mm # ?
+        unit: mm
