CI: Fix Docker container for daemon

--- a/Dockerfile-daemon
+++ b/Dockerfile-daemon
@@ -1,9 +1,8 @@
 FROM python:3.8-slim
 
 RUN mkdir /app
-COPY amarcord /app/amarcord
-COPY setup.py /app/setup.py
+COPY . /app
 WORKDIR /app
 
 RUN pip install '.[daemon]'
-CMD ["python", "amarcord/daemon.py"]
+ENTRYPOINT [ "/app/entrypoint.sh" ]
