--- a/config.yml
+++ b/config.yml
@@ -108,6 +108,16 @@ Karabo_bridge:
     detector.AGIPD:
       comment: X-ray detector
 
+      dark_run:
+        source: SPB_DA_USR/MDL/AMARCORD_INFO.darkRunNumber
+        key: ?
+        action: check_if_constant
+
+      dark_experiment:
+        source: SPB_DA_USR/MDL/AMARCORD_INFO.darkExperiment
+        key: ?
+        action: check_if_constant
+
       gain_setting:
         source: SPB_IRU_AGIPD1M1/MDL/FPGA_COMP
         key: gainMode.value
